# mush_wikis_scraper

./: CHANGELOG.md  Makefile  README.md  links.py  pyproject.toml
.github/workflows/: publish_to_pypi.yaml
hooks/: pre-commit
mush_wikis_scraper/: cli.py  page_readers.py  scrap_wikis.py
mush_wikis_scraper/commands/: scrap_wikis.py
mush_wikis_scraper/usecases/: scrap_wikis.py
mushpedia_scraper/: cli.py  thread_pool_decorator.py
mushpedia_scraper/adapters/: http_page_reader.py
mushpedia_scraper/usecases/: scrap_mushpedia.py
tests/: test_main.py
tests/e2e/: test_cli.py
tests/unit/: test_scrap_mushpedia.py  test_scrap_wikis.py
