[project]
name = "mushpedia_scraper"
version = "0.1.0"
description = "Scraper for mushpedia.com"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
    {name = "Charles-Meldhine Madi Mnemoi", email = "charlesmeldhine.madimnemoi@gmail.com"}
]
dependencies = [
    "beautifulsoup4>=4.12.3",
]

[dependency-groups]
dev = [
    "pytest-watcher>=0.4.3",
]
lint = [
    "mypy>=1.13.0",
    "ruff>=0.7.2",
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 119

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mushpedia_scraper"]
